--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="imgs/favicon.png" />
     <script src="https://kit.fontawesome.com/3c4b2652b6.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tomorrow:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
 </head>
@@ -19,7 +20,7 @@
     <!-- Navbar -->
     <nav id="navber">
         <div class="navbar__logo">
-            <img src="/imgs/favicon.png" alt="Yamba">
+            <img src="imgs/favicon.png" alt="Yamba">
             <a href="#">Yamba</a>    
         </div>
         <div class="navbar__menu">
@@ -33,6 +34,20 @@
             </ul>
         </div>
     </nav>
+    <!-- Home -->
+    <section id="home">
+        <img src="imgs/profile.jpg" alt="Yamba's profile photo " class="home__avatar">
+        
+        <h1 class="home__title">
+            A coder who always <br/>ecdysis like a snake
+        </h1>
+        <h2 class="home__description">
+            Developers aiming for the full stack
+        </h2>
+        <button class="home__contact">
+            Contact Me
+        </button>
+    </section>
     <!-- About -->
     <section id="about"></section>
     <!-- Skills -->
