--- a/index.html
+++ b/index.html
@@ -49,7 +49,57 @@
         </button>
     </section>
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+        <h1>About me</h1>
+        <p>
+            퍼블리셔로 1년 재직하다 프론트엔드 개발자가되고 싶은 </br>
+            부족한 신입이지만 열정과 노력을 결과물로 보여드리겠습니다!
+        </p>
+        <div class="about__major">
+            <div class="mjor">
+                <div class="major__icon">
+                    <i class="fab fa-html5"></i>
+                </div>
+                <div class="major__title">
+                    HTML
+                </div>
+            </div>
+            <div class="mjor">
+                <div class="major__icon">
+                    <i class="fab fa-css3-alt"></i>
+                </div>
+                <div class="major__title">
+                    CSS
+                </div>
+            </div>
+            <div class="mjor">
+                <div class="major__icon">
+                    <i class="fab fa-js"></i>
+                </div>
+                <div class="major__title">
+                    javaScript
+                </div>
+            </div>
+        </div>
+        <div class="about__jobs">
+            <div class="job">
+                <img src="imgs/jobs/tana.png" alt="Tana" class="job__logo">
+                <p class="job_name">해군포탈 재개발사업 (307개 사이트 리뉴얼) / 위젯생성 및 수정</p>
+                <p class="job__period">From June 2020 to July 2021</p>
+            </div>
+            <div class="job">
+                <img src="imgs/jobs/greenart.png" alt="greenart" class="job__logo">
+                <p class="job_name">UI/UX 반응형 웹 / 팀작업 모바일 앱 디자인 / 일러스트,포토샵/ BI,CI 제작 / 프로토타입 기초데이터 수집 / 집적 제작, 사용성 테스트</p>
+                <p class="job__period">2019 June - Nov until</p>
+            </div>
+        </div>
+
+        
+        
+
+
+
+    </section>
     <!-- Skills -->
     <section id="skills"></section>
     <!-- Work -->
