--- a/index.html
+++ b/index.html
@@ -93,15 +93,98 @@
                 <p class="job__period">2019 June - Nov until</p>
             </div>
         </div>
-
-        
-        
-
-
-
     </section>
     <!-- Skills -->
-    <section id="skills"></section>
+    <section id="skills">
+        <h1>
+            Skills
+        </h1>
+        <h2>
+            Skills & Attributes
+        </h2>
+        <p>
+            정부 프로젝트의 경험과 새로운 기술을 배우려는 열정, 팀 환경에서 일한 경험이 있습니다. <br/>계획과 일정을 짜는 능력, 필요할 때 신속하게 적응하는 능력이 있습니다.
+        </p>
+        <div class="skillset">
+            <div class="skillset__left">
+                <h3 class="skillset__title">
+                    Skills
+                </h3>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>
+                            HTML
+                        </span>
+                        <span>
+                            80%
+                        </span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>
+                            HTML
+                        </span>
+                        <span>
+                            80%
+                        </span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>
+                            CSS
+                        </span>
+                        <span>
+                            85%
+                        </span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <div class="skill_description">
+                        <span>
+                            javaScript
+                        </span>
+                        <span>
+                            70%
+                        </span>
+                    </div>
+                    <div class="skill__bar">
+                        <div class="skill__value"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="skillset__right">
+                <div class="tools">
+                    <h3 class="skillset__title">
+                        Tools
+                    </h3>
+                    <ul class="tools__list">
+                        <li><span>Visual Studio Code</span></li>
+                        <li><span>Adobe Photoshop</span></li>
+                        <li><span>Adobe Illustrator</span></li>
+                    </ul>
+                </div>
+                <div class="etc">
+                    <h3 class="skillset__title">
+                        Etc
+                    </h3>
+                    <ul class="etc__list">
+                        <li><span>Git</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- Work -->
     <section id="work"></section>
     <!-- Testimonials -->
