--- a/index.html
+++ b/index.html
@@ -186,7 +186,53 @@
         </div>
     </section>
     <!-- Work -->
-    <section id="work"></section>
+    <section id="work">
+        <h1>
+            My work
+        </h1>
+        <h3>
+            Projects
+        </h3>
+        <div class="work__categories">
+            <button class="caegory__btn">
+                All
+                <span class="category__count">
+                    8
+                </span>
+            </button>
+            <button class="caegory__btn">
+                Front-end
+                <span class="category__count">
+                    8
+                </span>
+            </button>
+            <button class="caegory__btn">
+                Back-end
+                <span class="category__count">
+                    8
+                </span>
+            </button>
+            <button class="caegory__btn">
+                Moblie
+                <span class="category__count">
+                    8
+                </span>
+            </button>
+        </div>
+        <div class="work__projects">
+            <a href="#" class="project" target="blank">
+                <img src="" alt="" class="project__img">
+                <div class="projects__description">
+                    <h3>
+                        프로적트명
+                    </h3>
+                    <span>
+                        clone coding with HTML and CSS
+                    </span>
+                </div>
+            </a>
+        </div>
+    </section>
     <!-- Testimonials -->
     <section id="testimonials"></section>
     <!-- Contact -->
