--- a/index.html
+++ b/index.html
@@ -236,7 +236,25 @@
     <!-- Testimonials -->
     <section id="testimonials"></section>
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+        <h1 class="contact__title">
+            Let's talk
+        </h1>
+        <h2 class="contact__email">
+            dudgh5002@naver.com
+        </h2>
+        <div class="contact__links">
+            <a href="https://github.com/Ymamba" target="_blank">
+                <i class="fa fa-github"></i>
+            </a>
+            <a href="https://open.kakao.com/o/s1uObjpd" target="_blank">
+                <img src="imgs/kakao.png" alt="kakaotalk">
+            </a>
+        </div>
+        <p class="contact__rights">
+            2021 Yamba - All rights reserved
+        </p>
+    </section>
 </body>
 
 </html>
