--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
     <!-- Navbar -->
     <nav id="navber">
         <div class="navbar__logo">
-            <img src="imgs/favicon.png" alt="Yamba">
-            <a href="#">Yamba</a>    
+            <a href="#"><img src="imgs/favicon.png" alt="Yamba"></a>    
         </div>
         <div class="navbar__menu">
             <ul class="navbar__menu">
-                <li class="navbar__menu__item">Home</li>
+                <li class="navbar__menu__item active">Home</li>
                 <li class="navbar__menu__item">About</li>
                 <li class="navbar__menu__item">Skills</li>
                 <li class="navbar__menu__item">Work</li>
