--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         </button>
     </section>
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section section__container">
         <h1>About me</h1>
-        <p>
+        <p class="hangle">
             퍼블리셔로 1년 재직하다 프론트엔드 개발자가되고 싶은 </br>
             부족한 신입이지만 열정과 노력을 결과물로 보여드리겠습니다!
         </p>
@@ -59,133 +59,126 @@
                 <div class="major__icon">
                     <i class="fab fa-html5"></i>
                 </div>
-                <div class="major__title">
+                <h2 class="major__title">
                     HTML
-                </div>
+                </h2>
             </div>
             <div class="mjor">
                 <div class="major__icon">
                     <i class="fab fa-css3-alt"></i>
                 </div>
-                <div class="major__title">
+                <h2 class="major__title">
                     CSS
-                </div>
+                </h2>
             </div>
             <div class="mjor">
                 <div class="major__icon">
                     <i class="fab fa-js"></i>
                 </div>
-                <div class="major__title">
+                <h2 class="major__title">
                     javaScript
-                </div>
+                </h2>
             </div>
         </div>
         <div class="about__jobs">
             <div class="job">
                 <img src="imgs/jobs/tana.png" alt="Tana" class="job__logo">
-                <p class="job_name">해군포탈 재개발사업 (307개 사이트 리뉴얼) / 위젯생성 및 수정</p>
-                <p class="job__period">From June 2020 to July 2021</p>
+                <div class="job__description">
+                    <p class="job_name hangle">해군포탈 재개발사업 (307개 사이트 리뉴얼) / 위젯생성 및 수정</p>
+                    <p class="job__period hangle">From June 2020 to July 2021</p>
+                </div>
             </div>
             <div class="job">
                 <img src="imgs/jobs/greenart.png" alt="greenart" class="job__logo">
-                <p class="job_name">UI/UX 반응형 웹 / 팀작업 모바일 앱 디자인 / 일러스트,포토샵/ BI,CI 제작 / 프로토타입 기초데이터 수집 / 집적 제작, 사용성 테스트</p>
-                <p class="job__period">2019 June - Nov until</p>
+                <div class="job__description">
+                    <p class="job_name hangle">UI/UX 반응형 웹 / 팀작업 모바일 앱 디자인 / 일러스트,포토샵/ BI,CI 제작 / 프로토타입 기초데이터 수집 / 집적 제작, 사용성 테스트</p>
+                    <p class="job__period hangle">2019 June - Nov until</p>
+                </div>
             </div>
         </div>
     </section>
     <!-- Skills -->
-    <section id="skills">
-        <h1>
-            Skills
-        </h1>
-        <h2>
-            Skills & Attributes
-        </h2>
-        <p>
-            정부 프로젝트의 경험과 새로운 기술을 배우려는 열정, 팀 환경에서 일한 경험이 있습니다. <br/>계획과 일정을 짜는 능력, 필요할 때 신속하게 적응하는 능력이 있습니다.
-        </p>
-        <div class="skillset">
-            <div class="skillset__left">
-                <h3 class="skillset__title">
-                    Skills
-                </h3>
-                <div class="skill">
-                    <div class="skill_description">
-                        <span>
-                            HTML
-                        </span>
-                        <span>
-                            80%
-                        </span>
+    <section id="skills" class="section">
+        <div class="section__container">
+            <h1>
+                Skills
+            </h1>
+            <h2>
+                Skills & Attributes
+            </h2>
+            <p class="hangle">
+                정부 프로젝트의 경험과 새로운 기술을 배우려는 열정, 팀 환경에서 일한 경험이 있습니다. <br/>계획과 일정을 짜는 능력, 필요할 때 신속하게 적응하는 능력이 있습니다.
+            </p>
+            <div class="skillset">
+                <div class="skillset__left">
+                    <h3 class="skillset__title">
+                        Skills
+                    </h3>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>
+                                HTML
+                            </span>
+                            <span>
+                                90%
+                            </span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width: 90%;"></div>
+                        </div>
                     </div>
-                    <div class="skill__bar">
-                        <div class="skill__value"></div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>
+                                CSS
+                            </span>
+                            <span>
+                                80%
+                            </span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width: 80%;"></div>
+                        </div>
+                    </div>
+                    <div class="skill">
+                        <div class="skill_description">
+                            <span>
+                                javaScript
+                            </span>
+                            <span>
+                                75%
+                            </span>
+                        </div>
+                        <div class="skill__bar">
+                            <div class="skill__value" style="width: 75%;"></div>
+                        </div>
                     </div>
                 </div>
-                <div class="skill">
-                    <div class="skill_description">
-                        <span>
-                            HTML
-                        </span>
-                        <span>
-                            80%
-                        </span>
+                <div class="skillset__right">
+                    <div class="tools">
+                        <h3 class="skillset__title">
+                            Tools
+                        </h3>
+                        <ul class="tools__list">
+                            <li><span>Visual Studio Code</span></li>
+                            <li><span>Adobe Photoshop</span></li>
+                            <li><span>Adobe Illustrator</span></li>
+                        </ul>
                     </div>
-                    <div class="skill__bar">
-                        <div class="skill__value"></div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill_description">
-                        <span>
-                            CSS
-                        </span>
-                        <span>
-                            85%
-                        </span>
-                    </div>
-                    <div class="skill__bar">
-                        <div class="skill__value"></div>
-                    </div>
-                </div>
-                <div class="skill">
-                    <div class="skill_description">
-                        <span>
-                            javaScript
-                        </span>
-                        <span>
-                            70%
-                        </span>
-                    </div>
-                    <div class="skill__bar">
-                        <div class="skill__value"></div>
+                    <div class="etc">
+                        <h3 class="skillset__title">
+                            Etc
+                        </h3>
+                        <ul class="etc__list">
+                            <li><span>Git</span></li>
+                        </ul>
                     </div>
                 </div>
             </div>
-            <div class="skillset__right">
-                <div class="tools">
-                    <h3 class="skillset__title">
-                        Tools
-                    </h3>
-                    <ul class="tools__list">
-                        <li><span>Visual Studio Code</span></li>
-                        <li><span>Adobe Photoshop</span></li>
-                        <li><span>Adobe Illustrator</span></li>
-                    </ul>
-                </div>
-                <div class="etc">
-                    <h3 class="skillset__title">
-                        Etc
-                    </h3>
-                    <ul class="etc__list">
-                        <li><span>Git</span></li>
-                    </ul>
-                </div>
             </div>
-        </div>
     </section>
     <!-- Work -->
-    <section id="work">
+    <section id="work" class="section">
         <h1>
             My work
         </h1>
@@ -235,7 +228,7 @@
     <!-- Testimonials -->
     <section id="testimonials"></section>
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section">
         <h1 class="contact__title">
             Let's talk
         </h1>
