--- a/index.html
+++ b/index.html
@@ -186,25 +186,25 @@
             Projects
         </h3>
         <div class="work__categories">
-            <button class="caegory__btn">
+            <button class="category__btn active">
                 All
                 <span class="category__count">
                     8
                 </span>
             </button>
-            <button class="caegory__btn">
+            <button class="category__btn">
                 Front-end
                 <span class="category__count">
                     8
                 </span>
             </button>
-            <button class="caegory__btn">
+            <button class="category__btn">
                 Back-end
                 <span class="category__count">
                     8
                 </span>
             </button>
-            <button class="caegory__btn">
+            <button class="category__btn">
                 Moblie
                 <span class="category__count">
                     8
@@ -216,7 +216,84 @@
                 <img src="" alt="" class="project__img">
                 <div class="projects__description">
                     <h3>
-                        프로적트명
+                        프로젝트명
+                    </h3>
+                    <span>
+                        clone coding with HTML and CSS
+                    </span>
+                </div>
+            </a>
+            <a href="#" class="project" target="blank">
+                <img src="" alt="" class="project__img">
+                <div class="projects__description">
+                    <h3>
+                        프로젝트명
+                    </h3>
+                    <span>
+                        clone coding with HTML and CSS
+                    </span>
+                </div>
+            </a>
+            <a href="#" class="project" target="blank">
+                <img src="" alt="" class="project__img">
+                <div class="projects__description">
+                    <h3>
+                        프로젝트명
+                    </h3>
+                    <span>
+                        clone coding with HTML and CSS
+                    </span>
+                </div>
+            </a>
+            <a href="#" class="project" target="blank">
+                <img src="" alt="" class="project__img">
+                <div class="projects__description">
+                    <h3>
+                        프로젝트명
+                    </h3>
+                    <span>
+                        clone coding with HTML and CSS
+                    </span>
+                </div>
+            </a>
+            <a href="#" class="project" target="blank">
+                <img src="" alt="" class="project__img">
+                <div class="projects__description">
+                    <h3>
+                        프로젝트명
+                    </h3>
+                    <span>
+                        clone coding with HTML and CSS
+                    </span>
+                </div>
+            </a>
+            <a href="#" class="project" target="blank">
+                <img src="" alt="" class="project__img">
+                <div class="projects__description">
+                    <h3>
+                        프로젝트명
+                    </h3>
+                    <span>
+                        clone coding with HTML and CSS
+                    </span>
+                </div>
+            </a>
+            <a href="#" class="project" target="blank">
+                <img src="" alt="" class="project__img">
+                <div class="projects__description">
+                    <h3>
+                        프로젝트명
+                    </h3>
+                    <span>
+                        clone coding with HTML and CSS
+                    </span>
+                </div>
+            </a>
+            <a href="#" class="project" target="blank">
+                <img src="" alt="" class="project__img">
+                <div class="projects__description">
+                    <h3>
+                        프로젝트명
                     </h3>
                     <span>
                         clone coding with HTML and CSS
