--- a/index.html
+++ b/index.html
@@ -303,7 +303,46 @@
         </div>
     </section>
     <!-- Testimonials -->
-    <section id="testimonials"></section>
+    <section id="testimonials" class="section">
+        <h1>
+            Testimonials
+        </h1>
+        <h3>
+            See what they say about me
+        </h3>
+        <div class="testimonials">
+            <div class="testimonial">
+                <img src="imgs/testimonial/people1.jpg" alt="" class="testimonial__avatar">
+                <div class="testimonial__speech-bubble">
+                    <p>
+                        아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말
+                    </p>
+                    <p class="name">
+                        <a href="#">
+                            <!-- #에 깃허브링크 -->
+                            이름
+                        </a>
+                        / 회사
+                    </p>
+                </div>
+            </div>
+            <div class="testimonial">
+                <div class="testimonial__speech-bubble">
+                    <p>
+                        아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말
+                    </p>
+                    <p class="name">
+                        <a href="#">
+                            <!-- #에 깃허브링크 -->
+                            이름
+                        </a>
+                        / 회사
+                    </p>
+                </div>
+                <img src="imgs/testimonial/people1.jpg" alt="" class="testimonial__avatar">
+            </div>
+        </div>
+    </section>
     <!-- Contact -->
     <section id="contact" class="section">
         <h1 class="contact__title">
