--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         </div>
     </section>
     <!-- Testimonials -->
-    <section id="testimonials" class="section">
+    <!-- <section id="testimonials" class="section">
         <h1>
             Testimonials
         </h1>
@@ -319,7 +319,6 @@
                     </p>
                     <p class="name">
                         <a href="#">
-                            <!-- #에 깃허브링크 -->
                             이름
                         </a>
                         / 회사
@@ -333,7 +332,6 @@
                     </p>
                     <p class="name">
                         <a href="#">
-                            <!-- #에 깃허브링크 -->
                             이름
                         </a>
                         / 회사
@@ -342,7 +340,7 @@
                 <img src="imgs/testimonial/people1.jpg" alt="" class="testimonial__avatar">
             </div>
         </div>
-    </section>
+    </section>   -->
     <!-- Contact -->
     <section id="contact" class="section">
         <h1 class="contact__title">
@@ -353,10 +351,48 @@
         </h2>
         <div class="contact__links">
             <a href="https://github.com/Ymamba" target="_blank">
-                <i class="fa fa-github"></i>
+                <svg version="1.1" focusable="false" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 48 48" style="enable-background:new 0 0 48 48;" xml:space="preserve">
+                    <path class="svg__wrap" d="M42.9,0H5.1C2.3,0,0,2.3,0,5.1v37.7C0,45.7,2.3,48,5.1,48h37.7c2.8,0,5.1-2.3,5.1-5.1V5.1C48,2.3,45.7,0,42.9,0
+                    z M29.7,41.1c-0.9,0.2-1.2-0.4-1.2-0.9c0-0.6,0-3.5,0-5.9c0-1.7-0.6-2.7-1.2-3.3c4-0.4,8.1-1,8.1-7.8c0-2-0.7-2.9-1.8-4.2
+                    c0.2-0.5,0.8-2.4-0.2-4.8c-1.5-0.5-4.9,1.9-4.9,1.9c-1.4-0.4-2.9-0.6-4.5-0.6s-3,0.2-4.5,0.6c0,0-3.4-2.4-4.9-1.9
+                    c-1,2.5-0.4,4.4-0.2,4.8c-1.1,1.3-1.7,2.2-1.7,4.2c0,6.8,4,7.4,8,7.8c-0.5,0.5-1,1.3-1.1,2.4c-1,0.5-3.6,1.3-5.2-1.5
+                    c-1-1.7-2.7-1.8-2.7-1.8c-1.7,0-0.1,1.1-0.1,1.1c1.2,0.5,2,2.6,2,2.6c1,3.2,6,2.1,6,2.1c0,1.5,0,3.9,0,4.3c0,0.5-0.3,1-1.2,0.9
+                    c-7.1-2.4-12-9.1-12-17c0-9.8,7.5-17.3,17.4-17.3s17.8,7.5,17.8,17.3C41.6,32,36.8,38.8,29.7,41.1z M19.2,34.6c-0.2,0-0.4,0-0.4-0.2
+                    c0-0.2,0.1-0.3,0.3-0.3c0.2,0,0.4,0.1,0.4,0.2C19.6,34.4,19.4,34.5,19.2,34.6L19.2,34.6z M18.2,34.5c0,0.1-0.2,0.3-0.4,0.3
+                    c-0.2,0-0.4-0.1-0.4-0.3c0-0.1,0.2-0.3,0.4-0.3C18,34.2,18.2,34.3,18.2,34.5z M16.7,34.4c0,0.1-0.3,0.2-0.4,0.1
+                    c-0.2,0-0.3-0.2-0.3-0.3c0-0.1,0.3-0.2,0.4-0.2C16.6,34,16.8,34.2,16.7,34.4L16.7,34.4z M15.4,33.8c-0.1,0.1-0.3,0.1-0.5-0.1
+                    c-0.2-0.1-0.2-0.3-0.1-0.4c0.1-0.1,0.3-0.1,0.5,0.1C15.4,33.5,15.5,33.7,15.4,33.8z M14.4,32.8c-0.1,0.1-0.3,0-0.4-0.2
+                    s-0.1-0.3,0-0.4c0.1-0.1,0.3,0,0.4,0.1C14.5,32.5,14.5,32.7,14.4,32.8z M13.7,31.8c-0.1,0.1-0.3,0-0.4-0.1c-0.1-0.1-0.1-0.3,0-0.4
+                    c0.1-0.1,0.3,0,0.4,0.1C13.8,31.5,13.8,31.7,13.7,31.8z M13,31c0,0.1-0.2,0.1-0.3,0c-0.1-0.1-0.2-0.2-0.2-0.3c0-0.1,0.2-0.1,0.3,0
+                    C13,30.8,13,30.9,13,31z"/>
+                </svg>
             </a>
             <a href="https://open.kakao.com/o/s1uObjpd" target="_blank">
-                <img src="imgs/kakao.png" alt="kakaotalk">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 136.1 136.1" style="enable-background:new 0 0 136.1 136.1;" xml:space="preserve">
+                    <g class="svg__wrap">
+                        <path class="st0" d="M114.3,0H21.8C9.7,0,0,9.7,0,21.8v92.5c0,12,9.7,21.8,21.8,21.8h92.5c12,0,21.8-9.7,21.8-21.8V21.8
+                            C136.1,9.7,126.3,0,114.3,0z M68,102c-2.9,0-8.5-0.6-8.5-0.6l-20.9,13.8c-0.8,0.5-1.8-0.2-1.7-1.1l3.5-18.8
+                            c-12.8-7-21.1-18.6-21.1-31.9C19.4,42,41.2,24.7,68,24.7c26.9,0,48.6,17.3,48.6,38.7C116.7,84.7,94.9,102,68,102z"/>
+                        <path class="st0" d="M50.7,55c0-1.3-1.1-2.4-2.4-2.4h-14c-1.3,0-2.4,1.1-2.4,2.4c0,1.3,1.1,2.4,2.4,2.4h4.6v16.9
+                            c0,0.6,0.2,1.2,0.7,1.7c0.4,0.4,1,0.7,1.6,0.7h0.5c0.6,0,1.2-0.2,1.6-0.7c0.4-0.4,0.7-1,0.7-1.7V57.4h4.3
+                            C49.7,57.4,50.7,56.3,50.7,55z"/>
+                        <path class="st0" d="M81.1,72.1h-6.5V54.9c0-1.4-1.2-2.6-2.6-2.6c-1.4,0-2.6,1.2-2.6,2.6v18.6c0,0.1,0,0.7,0,0.8
+                            c0,1.2,1,2.2,2.2,2.2h9.5c1.2,0,2.2-1,2.2-2.2C83.3,73.1,82.3,72.1,81.1,72.1z"/>
+                        <path class="st0" d="M94.8,63.3l6.6-6.6c0.9-0.9,0.9-2.3,0-3.2c-0.9-0.9-2.3-0.9-3.2,0L90,61.7v-6.8c0-1.4-1.2-2.6-2.6-2.6
+                            c-1.4,0-2.6,1.2-2.6,2.6v19.2c0,1.4,1.2,2.6,2.6,2.6c1.4,0,2.6-1.2,2.6-2.6v-5.9l1.5-1.5l6.9,9.1c0.8,1,2.2,1.2,3.2,0.5
+                            c1-0.8,1.2-2.2,0.5-3.3L94.8,63.3z"/>
+                        <path class="st0" d="M60.9,54.3C60.9,54.3,60.9,54.3,60.9,54.3c-0.5-1.2-1.8-2-3.3-2c-0.4,0-0.8,0.1-1.1,0.2
+                            c-0.3,0.1-0.7,0.2-1,0.4c-0.3,0.2-0.5,0.4-0.8,0.7c-0.1,0.2-0.3,0.4-0.4,0.6c-0.1,0.2-0.4,1.2-0.5,1.5c0,0.1-0.1,0.2-0.1,0.3
+                            c0,0.1-0.1,0.3-0.1,0.4c-0.1,0.1-0.1,0.3-0.2,0.4c-0.1,0.2-0.1,0.3-0.2,0.5c-0.1,0.2-0.1,0.4-0.2,0.5c-0.1,0.2-0.1,0.4-0.2,0.6
+                            c-0.1,0.2-0.2,0.4-0.2,0.6c-0.1,0.2-0.2,0.4-0.2,0.7c-0.1,0.2-0.2,0.5-0.3,0.7c-0.1,0.2-0.2,0.5-0.3,0.7c-0.1,0.2-0.2,0.5-0.3,0.7
+                            c-0.1,0.3-0.2,0.5-0.3,0.8c-0.1,0.3-0.2,0.5-0.3,0.8c-0.1,0.3-0.2,0.5-0.3,0.8c-0.1,0.3-0.2,0.5-0.3,0.8c-0.1,0.3-0.2,0.5-0.3,0.8
+                            c-0.1,0.3-0.2,0.5-0.3,0.8c-0.1,0.2-0.2,0.5-0.3,0.7c-0.1,0.2-0.2,0.5-0.3,0.7c-0.1,0.2-0.2,0.5-0.3,0.7c-0.1,0.2-0.2,0.5-0.3,0.7
+                            c-0.1,0.2-0.2,0.4-0.2,0.6c-0.1,0.2-0.2,0.4-0.2,0.6c-0.1,0.2-0.1,0.4-0.2,0.6c-0.1,0.2-0.1,0.3-0.2,0.5c-0.1,0.2-0.1,0.3-0.2,0.5
+                            c-0.1,0.1-0.1,0.3-0.2,0.4c0,0.1-0.1,0.2-0.1,0.4c0,0.1-0.1,0.2-0.1,0.3c0,0.1-0.1,0.2-0.1,0.2c0,0.1,0,0.1-0.1,0.2c0,0,0,0,0,0.1
+                            c-0.4,1.2,0.2,2.5,1.4,3c1.2,0.4,2.5-0.2,3-1.4l1.2-3.4h9.6l1.2,3.4c0.4,1.2,1.7,1.9,3,1.4c1.2-0.4,1.8-1.8,1.4-3L60.9,54.3z
+                            M54.3,67.3l3.2-9.2c0,0,0.1,0,0.1,0l3.2,9.2H54.3z"/>
+                    </g>
+                </svg>
             </a>
         </div>
         <p class="contact__rights">
