--- a/index.html
+++ b/index.html
@@ -179,165 +179,169 @@
     </section>
     <!-- Work -->
     <section id="work" class="section">
-        <h1>
-            My work
-        </h1>
-        <h3>
-            Projects
-        </h3>
-        <div class="work__categories">
-            <button class="category__btn active">
-                All
-                <span class="category__count">
-                    8
-                </span>
-            </button>
-            <button class="category__btn">
-                Front-end
-                <span class="category__count">
-                    8
-                </span>
-            </button>
-            <button class="category__btn">
-                Back-end
-                <span class="category__count">
-                    8
-                </span>
-            </button>
-            <button class="category__btn">
-                Moblie
-                <span class="category__count">
-                    8
-                </span>
-            </button>
-        </div>
-        <div class="work__projects">
-            <a href="#" class="project" target="blank">
-                <img src="" alt="" class="project__img">
-                <div class="projects__description">
-                    <h3>
-                        프로젝트명
-                    </h3>
-                    <span>
-                        clone coding with HTML and CSS
+        <div class="section__container">
+            <h1>
+                My work
+            </h1>
+            <h3>
+                Projects
+            </h3>
+            <div class="work__categories">
+                <button class="category__btn active">
+                    All
+                    <span class="category__count">
+                        8
                     </span>
-                </div>
-            </a>
-            <a href="#" class="project" target="blank">
-                <img src="" alt="" class="project__img">
-                <div class="projects__description">
-                    <h3>
-                        프로젝트명
-                    </h3>
-                    <span>
-                        clone coding with HTML and CSS
+                </button>
+                <button class="category__btn">
+                    Front-end
+                    <span class="category__count">
+                        8
                     </span>
-                </div>
-            </a>
-            <a href="#" class="project" target="blank">
-                <img src="" alt="" class="project__img">
-                <div class="projects__description">
-                    <h3>
-                        프로젝트명
-                    </h3>
-                    <span>
-                        clone coding with HTML and CSS
+                </button>
+                <button class="category__btn">
+                    Back-end
+                    <span class="category__count">
+                        8
                     </span>
-                </div>
-            </a>
-            <a href="#" class="project" target="blank">
-                <img src="" alt="" class="project__img">
-                <div class="projects__description">
-                    <h3>
-                        프로젝트명
-                    </h3>
-                    <span>
-                        clone coding with HTML and CSS
+                </button>
+                <button class="category__btn">
+                    Moblie
+                    <span class="category__count">
+                        8
                     </span>
-                </div>
-            </a>
-            <a href="#" class="project" target="blank">
-                <img src="" alt="" class="project__img">
-                <div class="projects__description">
-                    <h3>
-                        프로젝트명
-                    </h3>
-                    <span>
-                        clone coding with HTML and CSS
-                    </span>
-                </div>
-            </a>
-            <a href="#" class="project" target="blank">
-                <img src="" alt="" class="project__img">
-                <div class="projects__description">
-                    <h3>
-                        프로젝트명
-                    </h3>
-                    <span>
-                        clone coding with HTML and CSS
-                    </span>
-                </div>
-            </a>
-            <a href="#" class="project" target="blank">
-                <img src="" alt="" class="project__img">
-                <div class="projects__description">
-                    <h3>
-                        프로젝트명
-                    </h3>
-                    <span>
-                        clone coding with HTML and CSS
-                    </span>
-                </div>
-            </a>
-            <a href="#" class="project" target="blank">
-                <img src="" alt="" class="project__img">
-                <div class="projects__description">
-                    <h3>
-                        프로젝트명
-                    </h3>
-                    <span>
-                        clone coding with HTML and CSS
-                    </span>
-                </div>
-            </a>
+                </button>
+            </div>
+            <div class="work__projects">
+                <a href="#" class="project" target="blank">
+                    <img src="" alt="" class="project__img">
+                    <div class="projects__description">
+                        <h3>
+                            프로젝트명
+                        </h3>
+                        <span>
+                            clone coding with HTML and CSS
+                        </span>
+                    </div>
+                </a>
+                <a href="#" class="project" target="blank">
+                    <img src="" alt="" class="project__img">
+                    <div class="projects__description">
+                        <h3>
+                            프로젝트명
+                        </h3>
+                        <span>
+                            clone coding with HTML and CSS
+                        </span>
+                    </div>
+                </a>
+                <a href="#" class="project" target="blank">
+                    <img src="" alt="" class="project__img">
+                    <div class="projects__description">
+                        <h3>
+                            프로젝트명
+                        </h3>
+                        <span>
+                            clone coding with HTML and CSS
+                        </span>
+                    </div>
+                </a>
+                <a href="#" class="project" target="blank">
+                    <img src="" alt="" class="project__img">
+                    <div class="projects__description">
+                        <h3>
+                            프로젝트명
+                        </h3>
+                        <span>
+                            clone coding with HTML and CSS
+                        </span>
+                    </div>
+                </a>
+                <a href="#" class="project" target="blank">
+                    <img src="" alt="" class="project__img">
+                    <div class="projects__description">
+                        <h3>
+                            프로젝트명
+                        </h3>
+                        <span>
+                            clone coding with HTML and CSS
+                        </span>
+                    </div>
+                </a>
+                <a href="#" class="project" target="blank">
+                    <img src="" alt="" class="project__img">
+                    <div class="projects__description">
+                        <h3>
+                            프로젝트명
+                        </h3>
+                        <span>
+                            clone coding with HTML and CSS
+                        </span>
+                    </div>
+                </a>
+                <a href="#" class="project" target="blank">
+                    <img src="" alt="" class="project__img">
+                    <div class="projects__description">
+                        <h3>
+                            프로젝트명
+                        </h3>
+                        <span>
+                            clone coding with HTML and CSS
+                        </span>
+                    </div>
+                </a>
+                <a href="#" class="project" target="blank">
+                    <img src="" alt="" class="project__img">
+                    <div class="projects__description">
+                        <h3>
+                            프로젝트명
+                        </h3>
+                        <span>
+                            clone coding with HTML and CSS
+                        </span>
+                    </div>
+                </a>
+            </div>
         </div>
     </section>
     <!-- Testimonials -->
     <!-- <section id="testimonials" class="section">
-        <h1>
-            Testimonials
-        </h1>
-        <h3>
-            See what they say about me
-        </h3>
-        <div class="testimonials">
-            <div class="testimonial">
-                <img src="imgs/testimonial/people1.jpg" alt="" class="testimonial__avatar">
-                <div class="testimonial__speech-bubble">
-                    <p>
-                        아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말
-                    </p>
-                    <p class="name">
-                        <a href="#">
-                            이름
-                        </a>
-                        / 회사
-                    </p>
+        <div class="section__container">
+            <h1>
+                Testimonials
+            </h1>
+            <h3>
+                See what they say about me
+            </h3>
+            <div class="testimonials">
+                <div class="testimonial">
+                    <img src="imgs/testimonial/people1.jpg" alt="" class="testimonial__avatar">
+                    <div class="testimonial__speech-bubble">
+                        <p>
+                            아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말
+                        </p>
+                        <p class="name">
+                            <a href="#">
+                                이름
+                            </a>
+                            / 회사
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="testimonial">
-                <div class="testimonial__speech-bubble">
-                    <p>
-                        아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말
-                    </p>
-                    <p class="name">
-                        <a href="#">
-                            이름
-                        </a>
-                        / 회사
-                    </p>
+                <div class="testimonial">
+                    <div class="testimonial__speech-bubble">
+                        <p>
+                            아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말 아무말아무말아무말아무말
+                        </p>
+                        <p class="name">
+                            <a href="#">
+                                이름
+                            </a>
+                            / 회사
+                        </p>
+                    </div>
+                    <img src="imgs/testimonial/people1.jpg" alt="" class="testimonial__avatar">
                 </div>
-                <img src="imgs/testimonial/people1.jpg" alt="" class="testimonial__avatar">
             </div>
         </div>
     </section>   -->
