--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                 <li class="navbar__menu__item">Contact</li>
             </ul>
         </div>
+
+        <!-- Toggle button -->
+        <button class="navbar__toggle-btn">
+            <i class="fas fa-bars"></i>
+        </button>
     </nav>
     <!-- Home -->
     <section id="home">
@@ -54,8 +59,8 @@
             퍼블리셔로 1년 재직하다 프론트엔드 개발자가되고 싶은 </br>
             부족한 신입이지만 열정과 노력을 결과물로 보여드리겠습니다!
         </p>
-        <div class="about__major">
-            <div class="mjor">
+        <div class="about__majors">
+            <div class="major">
                 <div class="major__icon">
                     <i class="fab fa-html5"></i>
                 </div>
@@ -63,7 +68,7 @@
                     HTML
                 </h2>
             </div>
-            <div class="mjor">
+            <div class="major">
                 <div class="major__icon">
                     <i class="fab fa-css3-alt"></i>
                 </div>
@@ -71,7 +76,7 @@
                     CSS
                 </h2>
             </div>
-            <div class="mjor">
+            <div class="major">
                 <div class="major__icon">
                     <i class="fab fa-js"></i>
                 </div>
