--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav id="navber">
+    <nav id="navbar">
         <div class="navbar__logo">
             <a href="#"><img src="imgs/favicon.png" alt="Yamba"></a>    
         </div>
