--- a/index.html
+++ b/index.html
@@ -40,17 +40,19 @@
     </nav>
     <!-- Home -->
     <section id="home">
-        <img src="imgs/profile.jpg" alt="Yamba's profile photo " class="home__avatar">
-        
-        <h1 class="home__title">
-            A coder who always <br/>ecdysis like a snake
-        </h1>
-        <h2 class="home__description">
-            Developers aiming for the full stack
-        </h2>
-        <button class="home__contact">
-            Contact Me
-        </button>
+        <div class="home__container">
+            <img src="imgs/profile.jpg" alt="Yamba's profile photo " class="home__avatar">
+            
+            <h1 class="home__title">
+                A coder who always <br/>ecdysis like a snake
+            </h1>
+            <h2 class="home__description">
+                Developers aiming for the full stack
+            </h2>
+            <button class="home__contact">
+                Contact Me
+            </button>
+        </div>
     </section>
     <!-- About -->
     <section id="about" class="section section__container">
