--- a/index.html
+++ b/index.html
@@ -410,6 +410,10 @@
             2021 Yamba - All rights reserved
         </p>
     </section>
+    <!-- Arrow up -->
+    <button class="arrow-up">
+        <i class="fas fa-arrow-up"></i>
+    </button>
 </body>
 
 </html>
