JS : project filtering

--- a/index.html
+++ b/index.html
@@ -194,25 +194,25 @@
                 Projects
             </h3>
             <div class="work__categories">
-                <button class="category__btn active">
+                <button class="category__btn active" data-filter="*">
                     All
                     <span class="category__count">
                         8
                     </span>
                 </button>
-                <button class="category__btn">
+                <button class="category__btn" data-filter="front-end">
                     Front-end
                     <span class="category__count">
                         8
                     </span>
                 </button>
-                <button class="category__btn">
+                <button class="category__btn" data-filter="back-end">
                     Back-end
                     <span class="category__count">
                         8
                     </span>
                 </button>
-                <button class="category__btn">
+                <button class="category__btn" data-filter="moblie">
                     Moblie
                     <span class="category__count">
                         8
@@ -220,7 +220,7 @@
                 </button>
             </div>
             <div class="work__projects">
-                <a href="#" class="project" target="blank">
+                <a href="#" class="project" target="blank" data-type="front-end">
                     <img src="" alt="" class="project__img">
                     <div class="projects__description">
                         <h3>
@@ -231,7 +231,7 @@
                         </span>
                     </div>
                 </a>
-                <a href="#" class="project" target="blank">
+                <a href="#" class="project" target="blank" data-type="moblie">
                     <img src="" alt="" class="project__img">
                     <div class="projects__description">
                         <h3>
@@ -242,7 +242,7 @@
                         </span>
                     </div>
                 </a>
-                <a href="#" class="project" target="blank">
+                <a href="#" class="project" target="blank" data-type="front-end">
                     <img src="" alt="" class="project__img">
                     <div class="projects__description">
                         <h3>
@@ -253,7 +253,7 @@
                         </span>
                     </div>
                 </a>
-                <a href="#" class="project" target="blank">
+                <a href="#" class="project" target="blank" data-type="moblie">
                     <img src="" alt="" class="project__img">
                     <div class="projects__description">
                         <h3>
@@ -264,7 +264,7 @@
                         </span>
                     </div>
                 </a>
-                <a href="#" class="project" target="blank">
+                <a href="#" class="project" target="blank" data-type="moblie">
                     <img src="" alt="" class="project__img">
                     <div class="projects__description">
                         <h3>
@@ -275,7 +275,7 @@
                         </span>
                     </div>
                 </a>
-                <a href="#" class="project" target="blank">
+                <a href="#" class="project" target="blank" data-type="front-end">
                     <img src="" alt="" class="project__img">
                     <div class="projects__description">
                         <h3>
@@ -286,7 +286,7 @@
                         </span>
                     </div>
                 </a>
-                <a href="#" class="project" target="blank">
+                <a href="#" class="project" target="blank" data-type="moblie">
                     <img src="" alt="" class="project__img">
                     <div class="projects__description">
                         <h3>
@@ -297,7 +297,7 @@
                         </span>
                     </div>
                 </a>
-                <a href="#" class="project" target="blank">
+                <a href="#" class="project" target="blank" data-type="front-end">
                     <img src="" alt="" class="project__img">
                     <div class="projects__description">
                         <h3>
