--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 Projects
             </h3>
             <div class="work__categories">
-                <button class="category__btn active" data-filter="*">
+                <button class="category__btn selected" data-filter="*">
                     All
                     <span class="category__count">
                         8
