--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Yamba">
     <link rel="icon" type="image/png" href="imgs/favicon.png" />
     <script src="https://kit.fontawesome.com/3c4b2652b6.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">    
     <link href="https://fonts.googleapis.com/css2?family=Tomorrow:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
@@ -20,9 +20,9 @@
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo">
-            <a href="#"><img src="imgs/favicon.png" alt="Yamba"></a>    
+            <img src="imgs/logo.png" alt="Yamba"/>
+            <a href="#">amba</a>    
         </div>
-        <div class="navbar__menu">
             <ul class="navbar__menu">
                 <li class="navbar__menu__item active" data-link="#home">Home</li>
                 <li class="navbar__menu__item" data-link="#about">About</li>
@@ -31,8 +31,6 @@
                 <!-- <li class="navbar__menu__item" data-link="#testimonials">Testimonials</li> -->
                 <li class="navbar__menu__item" data-link="#contact">Contact</li>
             </ul>
-        </div>
-
         <!-- Toggle button -->
         <button class="navbar__toggle-btn">
             <i class="fas fa-bars"></i>
