--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <!-- Navbar -->
     <nav id="navbar">
         <div class="navbar__logo">
-            <img src="imgs/logo.png" alt="Yamba"/>
+            <img src="imgs/logo.png" alt="Yamba" class="logo" />
+            <img src="imgs/logo_mobile.png" alt="Yamba" class="logo_mobile" />
             <a href="#">amba</a>    
         </div>
             <ul class="navbar__menu">
